--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ fastapi = "*"
 python-multipart = "*"
 pydantic = {extras = ["dotenv"], version = "*"}
 sqlalchemy = "*"
+passlib = {extras = ["bcrypt"], version = "*"}
+python-jose = {extras = ["cryptography"], version = "*"}
 
 [dev-packages]
 
