Alembic migrations added.

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ pydantic = {extras = ["dotenv"], version = "*"}
 sqlalchemy = "*"
 passlib = {extras = ["bcrypt"], version = "*"}
 python-jose = {extras = ["cryptography"], version = "*"}
+alembic = "*"
 
 [dev-packages]
 
