--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ sqlalchemy = "*"
 passlib = {extras = ["bcrypt"], version = "*"}
 python-jose = {extras = ["cryptography"], version = "*"}
 alembic = "*"
+requests = "*"
 
 [dev-packages]
 
